--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         </ul>
     </section>
     <section class="image-text-section">
-        <img src="./dist/images/diretor.png" alt="Imagem com TV, Computador, Tablet e Celular">
+        <img src="./dist/images/diretor.png" alt="Diretor do filme">
         <div class="image-text-section__text_container">
             <h2 class="title">Diretor</h2>
             <p class="text--big">
@@ -118,7 +118,7 @@
         </div>
     </section>
     <section class="image-text-section">
-        <img src="./dist/images/compositor.jpg" alt="Imagem com TV, Computador, Tablet e Celular">
+        <img src="./dist/images/compositor.jpg" alt="Compositor do Filme">
         <div class="image-text-section__text_container">
             <h2 class="title">Compositor</h2>
             <p class="text--big">
@@ -129,7 +129,7 @@
     <section class="image-text-section image-text-section--image-full-width">
         <picture>
             <source media="(max-width: 768px)" srcset="./dist/images/fundo_rei_leao_celular.png">
-            <img src="./dist/images/logos/INCEPTION.jpg" alt="Imagem com Leão">
+            <img src="./dist/images/logos/INCEPTION.jpg" alt="Imagem do Filme">
         </picture>
         <div class="image-text-section__text_container image-text-section--image-full-width__text_container">
             <h2 class="title--big">Entenda melhor</h2>
